fix: wrong color

--- a/static-src/styles.css
+++ b/static-src/styles.css
@@ -223,7 +223,7 @@ footer {
   margin: 4.8rem 0 0;
   padding: 0 1.6rem 1.6rem;
   background-color: var(--footer-background-color);
-  color: var(--footer-background-color);
+  color: var(--footer-text-color);
 }
 
 .container {
